Add ng2d3 to project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<h1>NG2D3 Demo</h1>
+
+<bar-vertical
+  [view]="[600,300]"
+  [scheme]="colorScheme"
+  [results]="single"
+  [gradient]="false"
+  [xAxis]="true"
+  [yAxis]="true"
+  [legend]="true"
+  [showXAxisLabel]="false"
+  [showYAxisLabel]="false"
+  [showGridLines]="true">
+</bar-vertical>
