Update to ng2d3 1.5.2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <bar-vertical
   [view]="[600,300]"
   [scheme]="colorScheme"
-  [results]="single"
+  [results]="data"
   [gradient]="false"
   [xAxis]="true"
   [yAxis]="true"
