Implement custom chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,5 @@
-<h1>NG2D3 Demo</h1>
-
-<bar-vertical
+<h2>Custom Chart</h2>
+<custom-chart
   [view]="[600,300]"
-  [scheme]="colorScheme"
-  [results]="data"
-  [gradient]="false"
-  [xAxis]="true"
-  [yAxis]="true"
-  [legend]="true"
-  [showXAxisLabel]="false"
-  [showYAxisLabel]="false"
-  [showGridLines]="true">
-</bar-vertical>
+  [results]="data">
+</custom-chart>
