--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,24 @@
-<!-- <h2>Custom Chart</h2>
-<custom-chart
-  [view]="[600,300]"
-  [results]="data">
-</custom-chart> -->
+<div class="container">
+  <!-- <h1>Bar Chart</h1>
+  <ngx-charts-bar-vertical
+    [view]="[600,300]"
+    [results]="data"
+    [scheme]="colorScheme"
+    [xAxis]="true"
+    [yAxis]="true"
+    [legend]="true">
+  </ngx-charts-bar-vertical> -->
 
-<h1>Bar Chart</h1>
-<bar-vertical
-  [view]="[600,300]"
-  [results]="data"
-  [scheme]="colorScheme"
-  [xAxis]="true"
-  [yAxis]="true"
-  [legend]="true">
-</bar-vertical>
+  <!-- <ngx-charts-pie-chart
+    [scheme]="colorScheme"
+    [results]="data">
+  </ngx-charts-pie-chart> -->
+
+
+  <h2>Custom Chart</h2>
+  <custom-chart
+    [view]="[600,300]"
+    [results]="data">
+  </custom-chart>
+
+</div>
